--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,14 @@
     <string name="Registrase">Registrar Cuenta</string>
     <string name="Guardar">Guardar</string>
     <string name="nombre">Nombre</string>
-    <string name="apellido">Apellido</string>
+    <string name="nombreestudiante">Nombre:</string>
+    <string name="apellidoestudiante">Apellido:</string>
     <string name="correo">Correo electronico</string>
     <string name="contraseña">Contraseña</string>
+    <string name="Grado">Grado:</string>
+    <string name="Materia">Materia:</string>
+    <string name="Nota_Final">Nota Final:</string>
+    <string name="Cancelar">Cancelar</string>
+
 
 </resources>
